<resources>
    <string name="app_name">HealthAI</string>

    <!-- Welcome Activity -->
    <string name="welcome_title">Welcome to HealthAI</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <!-- Login and SignUp Activities -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>

    <!-- Home Page -->
    <string name="home_title">HealthAI</string>

    <!-- Professional Help Page -->
    <string name="professional_help_title">Get Professional Help</string>

    <!-- Support Page -->
    <string name="support_title">Support</string>
    <string name="support_subheading">Any issues using the app? Let us help.</string>
    <string name="issue_description">Please describe your issue</string>

    <!-- Review Page -->
    <string name="review_title">Leave a Review</string>

    <!-- Patient Details-->
    <string name="user_height">Height: %1$s</string>
    <string name="user_weight">Weight: %1$s</string>
    <string name="help_button">Help</string>

    <!-- Payment info   -->
    <string name="payment">Payment</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name_payment">First Name</string>
    <string name="last_name_payment">Last Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="email_address">Email Address</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card Number</string>
    <string name="cvc">CVC</string>
    <string name="month_and_year">Month and Year</string>
    <string name="submit">Submit</string>




</resources>